GNOME Bugzilla – Bug 611806
missing #ifdef
Last modified: 2010-03-10 14:04:17 UTC
variable xmlout is only defined when LIBXML_HTML_ENABLED or LIBXML_VALID_ENABLED xmllint.c: In function ‘parseAndPrintFile’: xmllint.c:2554: error: ‘xmlout’ undeclared (first use in this function) xmllint.c:2554: error: (Each undeclared identifier is reported only once xmllint.c:2554: error: for each function it appears in.) make[2]: *** [xmllint.o] Error 1
Okay, trivial fix pushed to git upstream, thanks, Daniel