Fix a missing #ifdef

https://bugzilla.gnome.org/show_bug.cgi?id=611806
Problem raised by Mark Overmeer